# pda-otsu-cuda-openmp

./: .gitignore  CMakeLists.txt  README.md  generate_test_images.py
plotting/: generate_graphs.py
src/: common.h  cuda_utils.h  main.cpp  otsu_cpu.cpp  otsu_cuda.cu  otsu_omp.cpp  sobel_cpu.cpp  sobel_omp.cpp  sobel_tbb.cpp
